Bug 1540203 - Tweak scroll anchor selection to allow to select everything but inline-fragmentable, non-text boxes. r=dholbert

Per the discussion in https://github.com/w3c/csswg-drafts/issues/4247.

Differential Revision: https://phabricator.services.mozilla.com/D44647